fix(3175163956): align chain select to Figma design

--- a/src/components/UI/ChainSelect/ChainSelect.module.scss
+++ b/src/components/UI/ChainSelect/ChainSelect.module.scss
@@ -1,10 +1,6 @@
 @import '../../../index';
 
-.chainSelect {
-  margin: 0 16px;
-}
-
 .selectedIcon {
-  position: absolute;
-  right: 8px;
+  padding-left: 20px;
+  transform: scale(0.833);
 }
